팀생성, 팀목록 구조 개선

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,3 +127,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+  .btn-icon-text {
+    @apply hidden lg:inline;
+  }
+}
